--- a/views/index.haml
+++ b/views/index.haml
@@ -2,7 +2,6 @@
   %head
     %title
       Mashup Movies - The Program
-    //%link{:rel => 'stylesheet',:href => '/css/spotkick.css'}
     = @program[MOVIES.first]['css']
   %body
     #resultsDiv
@@ -15,6 +14,7 @@
             %tr
               %td
                 //%img{:src => @program[value]['img']}
+                = "<img src='data:image/png;base64,#{@program[value]['img']}' />"
                 %center
                   %a{:href => @program[value]['url'], :title => 'details'} details
               %td
